// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fn$ > should transform 1`] = `
"import { $$clone as _$$clone } from \\"thaler/server\\";
import { $$scope as _$$scope } from \\"thaler/server\\";
import { $$register as _$$register } from \\"thaler/server\\";
import { fn$ } from 'thaler';
const PREFIX = 'Message: ';
const _fn = _$$register(\\"fn\\", \\"http://localhost:3000/example/a4dc1948-0\\", ({
  greeting,
  receiver
}) => {
  const [PREFIX] = _$$scope();
  const message = PREFIX + greeting + ', ' + receiver + '!';
  return message;
});
const example = _$$clone(_fn, [PREFIX]);"
`;

exports[`fn$ > should transform 2`] = `
"import { $$clone as _$$clone } from \\"thaler/client\\";
import { $$register as _$$register } from \\"thaler/client\\";
import { fn$ } from 'thaler';
const PREFIX = 'Message: ';
const _fn = _$$register(\\"fn\\", \\"http://localhost:3000/example/a4dc1948-0\\");
const example = _$$clone(_fn, [PREFIX]);"
`;

exports[`get$ > should transform 1`] = `
"import { $$clone as _$$clone } from \\"thaler/server\\";
import { $$register as _$$register } from \\"thaler/server\\";
import { get$ } from 'thaler';
const _get = _$$register(\\"get\\", \\"http://localhost:3000/example/a4dc1948-0\\", ({
  greeting,
  receiver
}) => {
  const message = greeting + ', ' + receiver + '!';
  return new Response(message, {
    headers: {
      'content-type': 'text/html'
    },
    status: 200
  });
});
const example = _$$clone(_get);"
`;

exports[`get$ > should transform 2`] = `
"import { $$clone as _$$clone } from \\"thaler/client\\";
import { $$register as _$$register } from \\"thaler/client\\";
import { get$ } from 'thaler';
const _get = _$$register(\\"get\\", \\"http://localhost:3000/example/a4dc1948-0\\");
const example = _$$clone(_get);"
`;

exports[`post$ > should transform 1`] = `
"import { $$clone as _$$clone } from \\"thaler/server\\";
import { $$register as _$$register } from \\"thaler/server\\";
import { post$ } from 'thaler';
const _post = _$$register(\\"post\\", \\"http://localhost:3000/example/a4dc1948-0\\", ({
  greeting,
  receiver
}) => {
  const message = greeting + ', ' + receiver + '!';
  return new Response(message, {
    headers: {
      'content-type': 'text/html'
    },
    status: 200
  });
});
const example = _$$clone(_post);"
`;

exports[`post$ > should transform 2`] = `
"import { $$clone as _$$clone } from \\"thaler/client\\";
import { $$register as _$$register } from \\"thaler/client\\";
import { post$ } from 'thaler';
const _post = _$$register(\\"post\\", \\"http://localhost:3000/example/a4dc1948-0\\");
const example = _$$clone(_post);"
`;

exports[`pure$ > should transform 1`] = `
"import { $$clone as _$$clone } from \\"thaler/server\\";
import { $$register as _$$register } from \\"thaler/server\\";
import { pure$ } from 'thaler';
const sleep = ms => new Promise(res => {
  setTimeout(res, ms, true);
});
const _pure = _$$register(\\"pure\\", \\"http://localhost:3000/example/a4dc1948-0\\", async ({
  greeting,
  receiver
}) => {
  await sleep(1000);
  const message = greeting + ', ' + receiver + '!';
  return message;
});
const example = _$$clone(_pure);"
`;

exports[`pure$ > should transform 2`] = `
"import { $$clone as _$$clone } from \\"thaler/client\\";
import { $$register as _$$register } from \\"thaler/client\\";
import { pure$ } from 'thaler';
const sleep = ms => new Promise(res => {
  setTimeout(res, ms, true);
});
const _pure = _$$register(\\"pure\\", \\"http://localhost:3000/example/a4dc1948-0\\");
const example = _$$clone(_pure);"
`;

exports[`server$ > should transform 1`] = `
"import { $$clone as _$$clone } from \\"thaler/server\\";
import { $$register as _$$register } from \\"thaler/server\\";
import { server$ } from 'thaler';
const _server = _$$register(\\"server\\", \\"http://localhost:3000/example/a4dc1948-0\\", request => {
  return new Response('Hello World', {
    headers: {
      'content-type': 'text/html'
    },
    status: 200
  });
});
const example = _$$clone(_server);"
`;

exports[`server$ > should transform 2`] = `
"import { $$clone as _$$clone } from \\"thaler/client\\";
import { $$register as _$$register } from \\"thaler/client\\";
import { server$ } from 'thaler';
const _server = _$$register(\\"server\\", \\"http://localhost:3000/example/a4dc1948-0\\");
const example = _$$clone(_server);"
`;
